# ChatServer

./: README.md  root  root.pub
CHAT/: CMakeLists.txt
CHAT/include/: public.hpp
CHAT/include/server/: chatserver.hpp  chatservice.hpp  public.hpp  user.hpp  usermodel.hpp
CHAT/include/server/ConnectionPool/: Connection.h
CHAT/include/server/db/: db.h
CHAT/include/server/model/: friendmodel.hpp  offlinemessagemodel.hpp  usermodel.hpp
CHAT/include/server/redis/: redis.hpp
CHAT/src/: CMakeLists.txt
CHAT/src/client/: CMakeLists.txt  clientMain.cpp  main.cpp  test_login.cpp
CHAT/src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  usermodel.cpp
CHAT/src/server/ConnectionPool/: CommonConnectionPool.cpp  Connection.cpp
CHAT/src/server/db/: db.cpp
CHAT/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
CHAT/src/server/redis/: redis.cpp
CHAT/test/testJson/: testjson  testjson.cpp
CHAT/test/testmuduo/: CMakeLists.txt  muduo_server.cpp
md/: 1_网络模块代码ChatServer.md  2_业务模块代码ChatService.md  3_基于网络和业务模块细说回调操作.md  4_数据库代码封装.md  5_数据层Model.md
